# arm-cortex-m0-c-cmake

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  RegisterAcccess.h  RegisterAccess.c  RegisterAccess.h  Workspace.code-workspace  doxygen_create.bat  doxygen_create.sh  doxygen_open.bat  doxygen_open.sh  entry.S  entry_c.c  linker_script.lds  main.c  nvic.h  random.c  random.h  register_access.c  register_access.h  timer.c  timer.h  toolchain.cmake  uart.c  uart.h
.github/workflows/: cicd.yml  clang-format-check.yml
doc/: Doxyfile  Heap.md
doc/doxygen-awesome-css/doxygen-custom/: custom.css  header.html
wiki/: Heap.md
